<resources>
    <string name="app_name">Search Github Repos</string>

    <string name="fragment_search_hint_search_repo">GitHub Repository</string>

    <string name="loading">Loading more...</string>
    <string name="no_results">No results found for <b>%s</b></string>
    <string name="unknown">\?</string>

    !-- Labels -->
    <string name="label_repo_name">Repository name:</string>
    <string name="label_repo_language">Repository language:</string>
    <string name="label_author">Author:</string>
    <string name="label_repository_description">Repository description:</string>

    <string name="button_back">Back to results</string>

</resources>