<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="observable"
            type="com.kartsev.dmitry.searchgithubrepos.data.database.RepoData" />

        <variable
            name="viewModel"
            type="com.kartsev.dmitry.searchgithubrepos.presentation.search.SearchRepoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/repoItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/row_item_margin_horizontal"
        android:paddingEnd="@dimen/row_item_margin_horizontal"
        android:onClick="@{() -> viewModel.repositoryItemClicked(observable)}">

        <ImageView
            android:id="@+id/repoItemStarIcon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_star"
            android:scaleType="fitCenter"
            android:tint="@color/colorIconsTint"
            android:layout_marginEnd="@dimen/tertiary_horizontal_margin"
            app:layout_constraintTop_toTopOf="@id/repoItemTextRepoNameLabel"
            app:layout_constraintBottom_toBottomOf="@id/repoItemTextRepoNameLabel"
            app:layout_constraintEnd_toStartOf="@id/repoItemStarsText" />

        <ImageView
            android:id="@+id/repoItemForksIcon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_git_branch"
            android:scaleType="fitCenter"
            android:tint="@color/colorIconsTint"
            android:layout_marginEnd="@dimen/tertiary_horizontal_margin"
            app:layout_constraintTop_toTopOf="@id/repoItemTextRepoNameLabel"
            app:layout_constraintBottom_toBottomOf="@id/repoItemTextRepoNameLabel"
            app:layout_constraintEnd_toStartOf="@id/repoItemForksText" />

        <TextView
            android:id="@+id/repoItemTextRepoNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/secondary_horizontal_margin"
            android:layout_marginTop="@dimen/secondary_vertical_margin"
            android:layout_marginEnd="@dimen/secondary_horizontal_margin"
            android:text="@string/label_repo_name"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/repoItemStarsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{observable.starsCount}"
            app:layout_constraintBottom_toBottomOf="@id/repoItemForksText"
            app:layout_constraintEnd_toStartOf="@id/repoItemForksIcon"
            tools:text="30" />

        <TextView
            android:id="@+id/repoItemForksText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/primary_horizontal_margin"
            android:text="@{observable.forksCount}"
            app:layout_constraintBottom_toBottomOf="@id/repoItemTextRepoNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="30" />

        <TextView
            android:id="@+id/repoItemNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tertiary_vertical_margin"
            android:layout_marginEnd="@dimen/secondary_horizontal_margin"
            app:layout_constraintLeft_toLeftOf="@+id/repoItemTextRepoNameLabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repoItemTextRepoNameLabel"
            app:search_highlight_messages="@{true}"
            app:search_phrase="@{viewModel.lastQuery}"
            app:search_text="@{observable.name}"
            tools:text="Repo full name" />

        <TextView
            android:id="@+id/repoItemDescriptionLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tertiary_vertical_margin"
            android:layout_marginEnd="@dimen/secondary_horizontal_margin"
            android:text="@string/label_repository_description"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/repoItemTextRepoNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/repoItemNameText" />

        <TextView
            android:id="@+id/repoItemDescriptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tertiary_vertical_margin"
            android:layout_marginEnd="@dimen/secondary_horizontal_margin"
            android:maxLines="5"
            android:ellipsize="end"
            app:layout_constraintLeft_toLeftOf="@+id/repoItemDescriptionLabelText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repoItemDescriptionLabelText"
            app:search_highlight_messages="@{true}"
            app:search_phrase="@{viewModel.lastQuery}"
            app:search_text="@{observable.description}"
            tools:text="Description." />

        <TextView
            android:id="@+id/repoItemLanguageLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tertiary_vertical_margin"
            android:layout_marginEnd="@dimen/secondary_horizontal_margin"
            android:text="@string/label_repo_language"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/repoItemTextRepoNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/repoItemDescriptionText" />

        <TextView
            android:id="@+id/repoItemLanguageText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/secondary_horizontal_margin"
            android:layout_marginTop="@dimen/tertiary_vertical_margin"
            android:layout_marginEnd="@dimen/secondary_horizontal_margin"
            android:text="@{observable.language}"
            app:layout_constraintLeft_toRightOf="@+id/repoItemLanguageLabelText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repoItemDescriptionText" />

        <View
            android:id="@+id/repoItemLineView"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/secondary_horizontal_margin"
            android:layout_marginTop="@dimen/tertiary_vertical_margin"
            android:layout_marginEnd="@dimen/secondary_horizontal_margin"
            android:layout_marginBottom="@dimen/secondary_vertical_margin"
            android:background="@color/colorDarkGrey"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repoItemLanguageText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>